--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -17,12 +17,12 @@
         android:textSize="20sp" />
 
     <androidx.viewpager.widget.ViewPager
+        android:id="@+id/track_pager_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/track_title"
         android:layout_marginTop="30dp"
-        android:layout_marginBottom="100dp"
-        android:background="@color/main_color" />
+        android:layout_marginBottom="100dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -51,8 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
-                android:max="100" />
+                android:layout_marginRight="50dp" />
 
             <TextView
                 android:id="@+id/track_duration"
@@ -75,15 +74,17 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/player_mode_switch_btn"
                 android:layout_width="0dp"
                 android:layout_height="20dp"
                 android:layout_weight="1"
-                android:src="@drawable/img_bofang_xzlb" />
+                android:src="@drawable/img_bofang_lb" />
 
             <ImageView
+                android:id="@+id/play_pre"
                 android:layout_width="0dp"
                 android:layout_height="20dp"
-                android:src="@drawable/img_bofang_sys"
+                android:src="@drawable/selector_player_sys"
                 android:layout_weight="1" />
 
             <ImageView
@@ -94,15 +95,17 @@
                 android:layout_weight="1" />
 
             <ImageView
+                android:id="@+id/play_next"
                 android:layout_width="0dp"
                 android:layout_height="20dp"
-                android:src="@drawable/img_bofang_xys"
+                android:src="@drawable/selector_player_xys"
                 android:layout_weight="1" />
 
             <ImageView
+                android:id="@+id/player_list"
                 android:layout_width="0dp"
                 android:layout_height="20dp"
-                android:src="@drawable/img_bofang_lb"
+                android:src="@drawable/img_bofang_xzlb"
                 android:layout_weight="1" />
         </LinearLayout>
     </LinearLayout>
