--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
 
     <color name="white">#ffffff</color>
     <color name="sub_text_title">#979797</color>
+    <color name="play_list_line_color">#ECEEF0</color>
+
+    <color name="black">#000000</color>
+
+    <color name="play_list_text_color">#7D828C</color>
 </resources>
