--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -38,19 +38,27 @@
 
         <ImageView
             android:id="@+id/detail_play_control"
-            android:layout_width="19dp"
-            android:layout_height="19dp"
+            android:layout_width="39dp"
+            android:layout_height="39dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="5dp"
             android:src="@drawable/img_bofang"/>
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/play_control_tv"
+            android:layout_width="match_parent"
+            android:layout_marginRight="130dp"
             android:layout_height="wrap_content"
+            android:ellipsize="marquee"
             android:layout_centerVertical="true"
+            android:singleLine="true"
+            android:marqueeRepeatLimit="marquee_forever"
             android:layout_toRightOf="@id/detail_play_control"
             android:textSize="14sp"
-            android:layout_marginLeft="12dp"
-            android:text="继续播放"/>
+            android:layout_marginLeft="3dp"
+            android:text="@string/click_play_tips_text"/>
 
         <TextView
             android:layout_width="wrap_content"
