--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
@@ -19,6 +19,7 @@
             android:layout_weight="3"
             android:layout_height="match_parent"/>
         <RelativeLayout
+            android:id="@+id/search_btn"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -34,6 +35,57 @@
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/content_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="50dp"/>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/main_play_control_item"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:background="#dfdfdf"
+        android:layout_alignParentBottom="true">
+
+        <mobapplication.himalaya.views.RoundRectImageView
+            android:id="@+id/main_track_cover"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/xq_fm"
+            android:layout_marginLeft="10dp"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/main_head_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/listener_as_you_like"
+                android:textColor="#444444"
+                android:singleLine="true"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:textSize="18sp"/>
+            <TextView
+                android:id="@+id/main_sub_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textColor="#7f7f7f"
+                android:textSize="14sp"/>
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/main_play_control"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/img_bofang_bf"/>
+    </LinearLayout>
+
+</RelativeLayout>
