--- a/app/src/main/res/layout/pop_play_list.xml
+++ b/app/src/main/res/layout/pop_play_list.xml
@@ -4,13 +4,61 @@
     android:layout_height="match_parent"
     android:background="@drawable/shape_play_list_bg">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/play_list_controller_container"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal">
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/play_list_mode_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/play_list_play_mode_iv"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/img_bofang_lb" />
+            <TextView
+                android:id="@+id/play_list_play_mode_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:textSize="16sp"
+                android:textColor="@color/main_color"
+                android:text="顺序播放"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/play_list_order_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/play_list_order_iv"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/img_bofang_dx"/>
+            <TextView
+                android:id="@+id/play_list_order_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:textSize="16sp"
+                android:textColor="@color/main_color"
+                android:text="顺序"/>
+        </LinearLayout>
+
+    </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/play_list_rv"
