完善了喜马拉雅项目基本功能

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -18,9 +18,10 @@
         android:background="@color/white">
 
         <TextView
+            android:id="@+id/detail_sub_btn"
             android:layout_width="75dp"
             android:layout_height="30dp"
-            android:text=" + 订阅"
+            android:text="@string/sub_tips_text"
             android:textColor="@color/white"
             android:gravity="center"
             android:background="@drawable/shape_subscription_bg"
