--- a/app/src/main/res/layout/fragment_empty_view.xml
+++ b/app/src/main/res/layout/fragment_empty_view.xml
@@ -14,6 +14,7 @@
             android:layout_height="75dp"
             android:src="@drawable/fragment_empty"/>
         <TextView
+            android:id="@+id/empty_view_tips_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="9dp"
