--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -6,11 +6,11 @@
     <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
         android:id="@+id/over_scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#F4F4F4">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recommend_list"
-            android:background="#F4F4F4"
             android:overScrollMode="never"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
