--- a/app/src/main/res/layout/item_subscription.xml
+++ b/app/src/main/res/layout/item_subscription.xml
@@ -9,11 +9,14 @@
         android:layout_height="match_parent"
         android:background="#fff4f4f4">
 
-        <androidx.recyclerview.widget.RecyclerView
+
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/sub_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:overScrollMode="never"/>
+            android:overScrollMode="never" />
 
     </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>
+
+
 </RelativeLayout>
