喜马拉雅FM SDK接入 XQ听项目完成

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/main_color"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <net.lucode.hackware.magicindicator.MagicIndicator
             android:id="@+id/main_indicator"
